syntax = "proto3";

package auth.ticket.service;

message AuthPermissionGrantedPb {
    repeated string permissions = 1;
}

message AuthTokenPb {
    AuthenticateTokenPb authenticate_token = 1;
    AuthorizeTokenPb authorize_token = 2;
    CdnTokenPb cdn_token = 3;
}
message AuthenticateTokenPb {
    int64 expires = 1;
    string token = 2;
}
message AuthorizeTokenPb {
    int64 expires = 1;
    string token = 2;
}
message CdnTokenPb {
    int64 expires = 1;
    string aws_cloudfront_key_pair_id = 2;
    string aws_cloudfront_policy = 3;
    string aws_cloudfront_signature = 4;
}
