syntax = "proto3";

package auth.user.password.reset.reset.service;

import "auth/ticket/x_protobuf/service.proto";

service ResetPasswordPb {
    rpc Reset (ResetPasswordRequestPb) returns (ResetPasswordResponsePb);
}
message ResetPasswordRequestPb {
    string reset_token = 1;
    string login_id = 2;
    string new_password = 3;
}
message ResetPasswordResponsePb {
    bool success = 1;
    auth.ticket.service.AuthPermissionGrantedPb granted = 2;
    auth.ticket.service.AuthTokenPb token = 3;
    ResetPasswordErrorKindPb err = 4;
}
message ResetPasswordMaskedResponsePb {
    bool success = 1;
    auth.ticket.service.AuthPermissionGrantedPb granted = 2;
    ResetPasswordErrorKindPb err = 3;
}
enum ResetPasswordErrorKindPb {
    INVALID_RESET = 0;
    ALREADY_RESET = 1;
}
